Change type to theme
