# controllers/Book.js
@@ -19,13 +19,13 @@ module.exports.getBooks = function getBooks (context) {
   const bestseller = context.params.query.bestseller;
   const starts_with = context.params.query.starts_with;
   const genre = context.params.query.genre;
-  const type = context.params.query.type;
+  const theme = context.params.query.theme;
   const similar_to = context.params.query.similar_to;
   const limit = context.params.query.limit;
   const offset = context.params.query.offset;
 
   return Promise.resolve (
-    Book.getBooks(published_after,suggested,bestseller,starts_with,genre,type,similar_to,limit,offset)
+    Book.getBooks(published_after,suggested,bestseller,starts_with,genre,theme,similar_to,limit,offset)
     .then(response => respondWithCode(context, 200, response))
     .catch(err => respondWithCode(context, 500, err))
   );
@@ -39,9 +39,9 @@ module.exports.getGenres = function getGenres (context) {
     )
 };
 
-module.exports.getTypes = function getTypes (context) {
+module.exports.getThemes = function getThemes (context) {
   return Promise.resolve(
-    Book.getTypes()
+    Book.getThemes()
       .then(response => respondWithCode(context, 200, response))
       .catch(err => respondWithCode(context, 500, err))
     )
